--- a/index.html
+++ b/index.html
@@ -22,3 +22,7 @@
            <ul>
                <li><a href="mailto:victor.ticllacuri@upch.pe">Correo Electrónico</a></li>
                <li><a href="http://github.com/VictorTicllacuri2000/">github.com/VictorTicllacuri2000/</a></li>
+           </ul>
+           </footer>
+     </body>
+</html>     
