--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
      <head> 
            <title> Ingeniería Biomédica </title>
+           <link rel="stylesheet" type="text/css" href="/css/mail.css">
      </head>
      <body>
            <nav>
