--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
            </div>
            <footer>
            <ul>
-               <li><a href="mailto:victor.ticllacuri@upch.pe">Correo Electrónico</a></li>
-               <li><a href="http://github.com/VictorTicllacuri2000/">github.com/VictorTicllacuri2000/</a></li>
+               <li><a href="/mailto:victor.ticllacuri@upch.pe">Correo Electrónico</a></li>
+               <li><a href="/http://github.com/VictorTicllacuri2000/">github.com/VictorTicllacuri2000/</a></li>
            </ul>
            </footer>
      </body>
